# BCC-IFC-studies

./: .gitignore  run_docker.sh
1-semestre/algoritmos/: create-files.sh
1-semestre/algoritmos/JVE-Alg-01/: JVE-Alg-01-Ex-01.c  JVE-Alg-01-Ex-02.c  JVE-Alg-01-Ex-03.c  JVE-Alg-01-Ex-04.c  JVE-Alg-01-Ex-05.c  JVE-Alg-01-Ex-06.c  JVE-Alg-01-Ex-07.c  JVE-Alg-01-Ex-08.c  JVE-Alg-01-Ex-09.c  JVE-Alg-01-Ex-10.c  JVE-Alg-01-Ex-11.c  JVE-Alg-01-Ex-12.c  JVE-Alg-01-Ex-13.c  JVE-Alg-01-Ex-14.c  JVE-Alg-01-Ex-15.c
1-semestre/algoritmos/JVE-Alg-02/: JVE-Alg-02-Ex-01.c  JVE-Alg-02-Ex-02.c  JVE-Alg-02-Ex-03.c  JVE-Alg-02-Ex-04.c  JVE-Alg-02-Ex-05.c  JVE-Alg-02-Ex-06.c  JVE-Alg-02-Ex-07.c  JVE-Alg-02-Ex-08.c  JVE-Alg-02-Ex-09.c  JVE-Alg-02-Ex-10.c
1-semestre/algoritmos/JVE-Alg-03/: JVE-Alg-03-Ex-01.c  JVE-Alg-03-Ex-02.c  JVE-Alg-03-Ex-03.c  JVE-Alg-03-Ex-04.c  JVE-Alg-03-Ex-05.c  JVE-Alg-03-Ex-06.c  JVE-Alg-03-Ex-07.c  JVE-Alg-03-Ex-08.c  JVE-Alg-03-Ex-09.c  JVE-Alg-03-Ex-10.c  JVE-Alg-03-Ex-11.c  JVE-Alg-03-Ex-12.c
1-semestre/algoritmos/JVE-Alg-04/: JVE-Alg-04-Ex-01.c  JVE-Alg-04-Ex-02.c  JVE-Alg-04-Ex-03.c  JVE-Alg-04-Ex-04.c  JVE-Alg-04-Ex-05.c  JVE-Alg-04-Ex-06.c  JVE-Alg-04-Ex-07.c  JVE-Alg-04-Ex-08.c  list.c  (+9 more)
1-semestre/etica-e-legislacao/: av1.txt
1-semestre/fundamentos-computacao/: _float.py  calculadora.neander  livros.txt  neander.txt
1-semestre/introducao-logica/: README.md  joao-nunes-quadro.md  livros.txt  quadro.md  teller-quadro.txt
1-semestre/metodologia-cientifica/: artigos-cientificos.txt  tipos-conhecimentos.planttext
2-semestre/web/: portfoliojota.html
3-semestre/paradigmas-de-programacao/: .gitignore  main.hs
4-semestre/arquitetura/: .gitignore  Makefile  bochsrc.txt  writex.s
4-semestre/automatos/: teste-automato.txt
4-semestre/ed2/: exercicios_26_08.txt
4-semestre/redes/trabalho/: CMakeLists.txt
4-semestre/redes/trabalho/elixir/http/: mix.exs
4-semestre/redes/trabalho/elixir/http/config/: config.exs
4-semestre/redes/trabalho/elixir/http/content/: index.html
4-semestre/redes/trabalho/elixir/http/lib/: handler.ex  http.ex  server.ex  supervisor.ex
4-semestre/redes/trabalho/elixir/http/lib/tcp/: handler.ex  server.ex
4-semestre/redes/trabalho/include/: server_tcp.hpp
4-semestre/redes/trabalho/src/: main.cpp  server_tcp.cpp
5-semetre/so/: a.out  pid_fork.c
other/binary-tree/: Makefile  README.md  main.c
other/chess-test/: Makefile
other/os-test/: boot.asm  livros.txt  print.asm  run.sh
others/base64/: Makefile
others/chess-test/: Makefile  class_diagram.planttext
others/gosh/: go.mod  main.go
others/ideias-tcc/: calculos_astrofisicos.txt  enchente.txt  pipeline.txt
others/learn-latex/: main.tex
others/list_implementation_c/: list.c
others/logic-cpp/: .gitignore  CMakeLists.txt  Doxyfile  invalid.test  valids.test
others/math-expr-cpp/: .gitignore  CMakeLists.txt  Doxyfile
others/math-expr-cpp/include/mathexpr/: ast.hpp  expr.hpp  greetings.hpp  hello.hpp  operator.hpp  symbol.hpp
others/math-expr-cpp/src/: ast.cpp  expr.cpp  greetings.cpp  hello.cpp  operator.cpp  symbol.cpp
others/math-expr-cpp/tests/: main.cpp
others/os-test/: print.asm  protected-mode.asm  reading-disk.asm  videos.txt
others/sdl_test/: Makefile
others/sin_cos/: sin.exs
others/test_py_c/: .gitignore  Makefile  compile_commands.json  setup.py
(+428 files in other folders)
